# AI-Commerce-HQ

./: .gitignore  GETTING_STARTED.md  README.md  TASKS.md  build-installer.py  dev.py  index.html  package-lock.json  package.json  start-dev.bat  tailwind.config.js
.claude/: settings.local.json
backend/: backend.spec  main.py  requirements.txt
backend/agents/: base_agent.py
backend/api/: routes.py  websocket.py
backend/database/: db.py  models.py
backend/orchestrator/: etsy_master.py  fiverr_master.py  gmo.py  tiktok_master.py  trading_master.py  youtube_master.py
backend/state/: product_state.py
backend/tools/: ai_router.py  etsy_tool.py  gemini_tool.py  openai_tool.py  printify_tool.py
scripts/: build-windows.ps1  dev.ps1  generate-icons.ps1  setup-dev.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/src/: main.rs
src/components/: AchievementsPanel.tsx  TradingSignalsPanel.tsx
src/components/Agents/: AgentAvatar.tsx  AgentDesk.tsx
src/components/ApprovalDesk/: ApprovalPanel.tsx  ProductCard.tsx
src/components/Game/: Agent3D.tsx  CentralCore.tsx  GameHUD.tsx  GameWorld.tsx  MissionCard3D.tsx  MoneyFlow.tsx  Office3D.tsx  Zone.tsx
src/components/Office/: OfficeLayout.tsx
src/components/Rooms/: DormantRoom.tsx  EtsyRoom.tsx  GMORoom.tsx  RoomBase.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/Splash/: SplashScreen.tsx
src/components/StatusPanel/: SystemStatus.tsx
src/hooks/: useWebSocket.ts
src/store/: useAppStore.ts
src/types/: index.ts
(+1 files in other folders)
